# ai

./: .gitignore
000_hello_world/: .gitignore  README.md  pyproject.toml  requirements.txt
000_hello_world/anthropic_py/: hello_anthropic.py
000_hello_world/openai_py/: hello_openai.py  hello_openai_image.py
000_hello_world/openrouter_via_langchain_py/: hello_langchain.py
000_hello_world/openrouter_via_langchaingo_go/: go.mod  hello_langchaingo.go
000_hello_world/openrouter_via_litellm_py/: hello_litellm.py
001_omc_cri/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.base  README-radio.md  README-timmyb32r.md  README.md  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  download-cache.sh  go.mod  go.sum
001_omc_cri/testdata/: e2e-checklist.md  golden_sensevoice_stdout.md  golden_sensevoice_stdout.txt  (+1 more)
002_cri_mobile_client/: ARCHITECTURE.md  CLAUDE.md  README.md  settings.gradle.kts
003_omc_cri2/: .gitignore  CHATGPT.md  DEEP_RESEARCH_REPORT.md  DEVELOPMENT_PLAN.md  FINAL_ARCHITECTURE.md  KIMI.md  QWEN.md  SCROLL.md
004_timmy_code/: .gitignore  Dockerfile  Dockerfile.base  Makefile  README.md  TIMMY.md  go.mod  go.sum  promts.md
005_rust/: Cargo.toml  config.yaml
005_rust/docker-compose/: docker-compose.yaml  init.sql
005_rust/src/: main.rs  partition.rs
005_rust/src/config/: mod.rs  yaml.rs
005_rust/src/middleware/: json_arrow.rs  mod.rs
005_rust/src/pipeline/: middleware.rs  mod.rs  sink.rs  source.rs
005_rust/src/sink/: clickhouse.rs
005_rust/src/source/: mod.rs  ydb_topic.rs
005_rust/src/types/: arrow_batch.rs  mod.rs
(+204 files in other folders)
