[package]
name = "ydb-ch-replicator"
version = "0.1.0"
edition = "2021"
description = "YDB Topic to ClickHouse replicator (PoC)"

[dependencies]
ydb = { version = "0.13", features = ["force-exhaustive-all"] }
clickhouse-arrow = "0.2"
arrow = "57"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
jsonpath_lib = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror = "2"
chrono = "0.4"
shellexpand = "3"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 2
